src/test/snapshots/my_http_server__test__parser__test_md2html__test_md2html-case-h2_heading.snap
---
source: src/test/parser.rs
description: "## Section\n\nContent here"
info: {}
---
<!DOCTYPE html><html>
<head><title></title></head>
<body>
<h2>Section</h2><p>Content here</p>
</body></html>
