src/test/snapshots/my_http_server__test__parser__test_md2html__test_md2html-case-heading_and_text.snap
---
source: src/test/parser.rs
description: "# Test\n\nHello world!"
info: {}
---
<!DOCTYPE html><html>
<head><title></title></head>
<body>
<h1>Test</h1><p>Hello world!</p>
</body></html>
