src/test/snapshots/my_http_server__test__parser__test_md2html__test_md2html-case-multiple_context_vars.snap
---
source: src/test/parser.rs
description: "# Documentation"
info:
  title: Docs
  author: Team
---
<!DOCTYPE html><html>
<head><title>Docs</title></head>
<body>
<h1>Documentation</h1>
</body></html>
