src/test/snapshots/my_http_server__test__parser__test_md2html__test_md2html-case-no_context.snap
---
source: src/test/parser.rs
description: "# About"
info: {}
---
<!DOCTYPE html><html>
<head><title></title></head>
<body>
<h1>About</h1>
</body></html>
