src/test/snapshots/my_http_server__test__parser__test_md2html__test_md2html-case-simple_markdown.snap
---
source: src/test/parser.rs
description: "# Welcome\n\nSimple content"
info: {}
---
<!DOCTYPE html><html>
<head><title></title></head>
<body>
<h1>Welcome</h1><p>Simple content</p>
</body></html>
