src/test/snapshots/my_http_server__test__parser__test_md2html__test_md2html-case-single_image.snap
---
source: src/test/parser.rs
description: "# Single\n\n![Logo](./logo.svg)"
info: {}
---
<!DOCTYPE html><html>
<head><title></title></head>
<body>
<h1>Single</h1><p><img src="./logo.svg" alt="Logo"></img></p>
</body></html>
