src/test/snapshots/my_http_server__test__parser__test_md2html__test_md2html-case-single_link.snap
---
source: src/test/parser.rs
description: "# Home\n\n[Index](./index.md)\n"
info: {}
---
<!DOCTYPE html><html>
<head><title></title></head>
<body>
<h1>Home</h1><p><a href="./index.md">Index</a></p>
</body></html>
