src/test/snapshots/my_http_server__test__parser__test_md2html__test_md2html-case-toc.snap
---
source: src/test/parser.rs
description: "# With Files\n\n- [readme.txt](/readme.txt)\n- [subdir](/subdir)\n    - [nested.md](/subdir/nested.md)\n    - [with space in subdir.txt](/subdir/with%20space%20in%20subdir.txt)\n- [test1.md](/test1.md)\n- [test2.html](/test2.html)\n- [with space.txt](/with%20space.txt)"
info: {}
---
<!DOCTYPE html><html>
<head><title></title></head>
<body>
<h1>With Files</h1><ul class="markdown-list-kind-dash"><li><p><a href="/readme.txt">readme.txt</a></p></li><li><p><a href="/subdir">subdir</a></p><ul class="markdown-list-kind-dash"><li><p><a href="/subdir/nested.md">nested.md</a></p></li><li><p><a href="/subdir/with%20space%20in%20subdir.txt">with space in subdir.txt</a></p></li></ul></li><li><p><a href="/test1.md">test1.md</a></p></li><li><p><a href="/test2.html">test2.html</a></p></li><li><p><a href="/with%20space.txt">with space.txt</a></p></li></ul>
</body></html>
